tooling/nargo_cli/tests/snapshots/execution_failure/fold_dyn_index_fail/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:9:12
  │
9 │     assert(x[idx] != 0);
  │            ------
  │
  = Call stack:
    1. src/main.nr:3:5
    2. src/main.nr:9:12

Failed assertion
