tooling/nargo_cli/tests/snapshots/execution_failure/fold_dyn_index_fail/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Index out of bounds: 14 is out of bounds for the array of length 5
  ┌─ src/main.nr:9:12
  │
9 │     assert(x[idx] != 0);
  │            ------
  │

Error interpreting main function
