tooling/nargo_cli/tests/snapshots/execution_failure/fold_dyn_index_fail/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: Indexing an array or slice with a type other than `u32` is deprecated and will soon be an error
  ┌─ src/main.nr:2:7
  │
2 │     x[z] = 4;
  │       -
  │

warning: Indexing an array or slice with a type other than `u32` is deprecated and will soon be an error
  ┌─ src/main.nr:9:14
  │
9 │     assert(x[idx] != 0);
  │              ---
  │

error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:3:5
  │
3 │     dynamic_index_check(x, z + 10);
  │     ------------------------------
  │
  = Call stack:
    1. src/main.nr:3:5
    2. src/main.nr:3:5

Failed assertion
